--- a/sinner executor.html
+++ b/sinner executor.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sinner Executor</title>
+    <title>Interactive Page with Side Menu and Eyes</title>
     <style>
         body {
             margin: 0;
@@ -152,6 +152,8 @@
             color: #bbbbbb;
         }
     </style>
+    <!-- Link to the favicon -->
+    <link rel="icon" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT3wyZihWQqeLSfcaaEHVBlYucAKKgjDaBdAw&s" type="image/png">
 </head>
 <body>
     <button class="menu-toggle" aria-label="Toggle Menu">☰</button>
