--- a/sinner executor.html
+++ b/sinner executor.html
@@ -241,7 +241,7 @@
                     html = `
                         <h1 class="content-title">Free Install</h1>
                         <p class="content-text">Click below to download the free version of Sinner Executor:</p>
-                        <a class="download-link" href="https://example.com/free-download" download>Download Free Sinner Executor</a>
+                        <a class="download-link" href="https://limewire.com/d/c106c403-b500-431a-a442-82c46195ce5a#k_hKE35NE-E5izPmZv1jDyF05LgXc_9rbK_6zeFFF8Y" download>Download Free Sinner Executor</a>
                     `;
                     break;
                 case 'paid':
@@ -290,7 +290,7 @@
                 case 'support':
                     html = `
                         <h1 class="content-title">Discord</h1>
-                        <p class="content-text">Join our Discord: <a href="https://discord.gg/test">https://discord.gg/test</a></p>
+                        <p class="content-text">Join our Discord: <a href="https://discord.gg/test">https://discord.gg/eAXVxsTuH4</a></p>
                     `;
                     break;
                 default:
