--- a/sinner executor.html
+++ b/sinner executor.html
@@ -161,7 +161,7 @@
         <h2 class="menu-title">Menu</h2>
         <button class="menu-button" onclick="showContent('home')">Home</button>
         <button class="menu-button" onclick="showContent('free')">Free Install</button>
-        <button class="menu-button" onclick="showContent('paid')">Paid Sinner Executor</button>
+        <button class="menu-button" onclick="showContent('paid')">Paid Executor</button>
         <button class="menu-button" onclick="showContent('tips')">Install Instructions</button>
         <button class="menu-button" onclick="showContent('contact')">Best Script hub</button>
         <button class="menu-button" onclick="showContent('faq')">FAQ</button>
@@ -187,8 +187,9 @@
     </div>
 
     <footer>
-        ☠ UNC METER BELOW ☠
-        <meter value="86" min="0" max="100" low="30" high="70" optimum="80"></meter>
+        ☠ UNC METER BELOW Free:86% Paid:98% ☠
+        <meter value="76" min="0" max="100" low="30" high="70" optimum="80"></meter>
+        <meter value="98" min="0" max="100" low="30" high="70" optimum="80"></meter>
     </footer>
 
     <script>
