--- a/sinner executor.html
+++ b/sinner executor.html
@@ -187,8 +187,14 @@
     </div>
 
     <footer>
-        ☠ UNC METER BELOW Free:86% Paid:98% ☠
+        ☠ UNC METER BELOW 
+    </footer>
+Free:86%
+    </footer>
         <meter value="76" min="0" max="100" low="30" high="70" optimum="80"></meter>
+    </footer>
+ Paid:98% ☠
+    </footer>
         <meter value="98" min="0" max="100" low="30" high="70" optimum="80"></meter>
     </footer>
 
