--- a/sinner executor.html
+++ b/sinner executor.html
@@ -187,15 +187,13 @@
     </div>
 
     <footer>
-        ☠ UNC METER BELOW 
-    </footer>
-Free:86%
-    </footer>
-        <meter value="76" min="0" max="100" low="30" high="70" optimum="80"></meter>
-    </footer>
- Paid:98% ☠
-    </footer>
-        <meter value="98" min="0" max="100" low="30" high="70" optimum="80"></meter>
+        ☠ UNC METER BELOW ☠
+
+    <div>
+        <meter value="76" min="0" max="100" low="30" high="70" optimum="80"></meter>  Free:86%
+	<div>
+   
+        <meter value="92" min="0" max="100" low="30" high="70" optimum="80"></meter>	 Paid:98%
     </footer>
 
     <script>
