--- a/sinner executor.html
+++ b/sinner executor.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Interactive Page with Side Menu and Eyes</title>
+    <title>Your a sinner</title>
     <style>
         body {
             margin: 0;
@@ -252,7 +252,7 @@
                 case 'paid':
                     html = `
                         <h1 class="content-title">Paid Sinner Executor</h1>
-                        <p class="content-text">Paid Sinner Executor is a better option for the guaranteed undetection and higher UNC Being 98% UNC. Join the discord to purchase</p>
+                        <p class="content-text">Paid Sinner Executor is a better option because it is guaranteed undetected and for the higher UNC Is 98% UNC. Join the discord to purchase</p>
                         <p class="content-text">Pricing: Lifetime key $20 Paypal Only</p>
                     `;
                     break;
